--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ningersan",
   "license": "MIT",
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
