--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Ningersan",
   "license": "MIT",
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-core-image-upload": "^2.2.3",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
