--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-core-image-upload": "^2.2.3",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-masonry-component": "^6.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
