--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^7.2.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -38,6 +39,7 @@
     "install": "^0.10.2",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.10",
+    "prop-types": "^15.6.0",
     "react-hot-loader": "^4.0.0-beta.14",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
