--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "Ningersan",
   "license": "MIT",
   "dependencies": {
+    "antd": "^3.1.4",
+    "classnames": "^2.2.5",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-core-image-upload": "^2.2.3",
     "react-dom": "^16.2.0",
-    "react-masonry-component": "^6.0.2"
+    "react-masonry-component": "^6.0.2",
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "1.x"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
