--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,8 @@
         "react/no-array-index-key": "off",
         "react/prop-types": "off",
         "jsx-a11y/no-static-element-interactions":"off",
-        "jsx-a11y/click-events-have-key-events":"off"
+        "jsx-a11y/click-events-have-key-events":"off",
+        "jsx-a11y/no-noninteractive-element-interactions":"off"
     },
     "plugins": [
         "react",
