--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.1.4",
+    "axios": "^0.17.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "classnames": "^2.2.5",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-core-image-upload": "^2.2.3",
     "react-dom": "^16.2.0",
     "react-masonry-component": "^6.0.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "1.x"
+    "react-thunk": "^1.0.0",
+    "react-transition-group": "1.x",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
